spacing adjustments to fit video in home

--- a/index.html
+++ b/index.html
@@ -138,19 +138,205 @@
 
   <main class="main">
 
-    <section class="hero">
-      <div class="container hero__main flex">
-        <div class="hero__text flex flex-col gap--lg">
-          <!-- <a href="#" class="hero__event">
+    <section class="hero container hero__main">
+      <div class="hero__left-side">
+        <!-- <a href="#" class="hero__event">
             <small>26-28 July</small><small>•</small><small class="text--emphasis">Mining Disrupt
               2022</small><small>•</small><small>Register now</small>
           </a> -->
-
-          <h1 class="hero__heading">
-            Revolutionary <emphasis>crypto mining</emphasis> containers
-          </h1>
-          <iframe width="420" height="345" src="https://www.youtube.com/watch?v=wbr2C32bpQc?autoplay=1&mute=1">
-          </iframe>
+        <h1 class="hero__heading">
+          Revolutionary <emphasis>crypto mining</emphasis> containers
+        </h1>
+        <iframe class="hero__video" width="490" height="275"
+          src="https://www.youtube.com/embed/wbr2C32bpQc?&autoplay=1&mute=1"
+          title="The New M300 Minipod Bitcoin Mining  Container from Digital Shovel" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </iframe>
+      </div>
+      <div class="hero__right-side">
+        <div class="hero__minipod">
+          <div class="cameraRotate">
+            <div class="base">
+              <div class="spine">
+                <div class="side-1"></div>
+                <div class="side-2"></div>
+                <div class="side-3">
+                  <div class="tooltip tooltip-flipped">
+                    <h2>4x</h2>
+                    <p>15,000 CFM Fans</p>
+                  </div>
+                </div>
+                <div class="side-4">
+                  <div class="tooltip tooltip-normal">
+                    <h2>3x</h2>
+                    <p>Awning-based Intake System</p>
+                  </div>
+                </div>
+                <div class="side-top"></div>
+                <div class="side-bottom"></div>
+                <div class="door-1"></div>
+                <div class="busway-1">
+                  <div class="tooltip tooltip-busway">
+                    <h2>2x</h2>
+                    <p>Rooftop Mounted Busways</p>
+                  </div>
+                </div>
+                <div class="door-2"></div>
+                <div class="busway-2">
+                  <div class="tooltip tooltip-busway tooltip-busway-flipped">
+                    <h2>2x</h2>
+                    <p>Rooftop Mounted Busways</p>
+                  </div>
+                </div>
+                <div class="awning-1">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="awning-2">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="awning-3">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="fan-1">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
+                  </div>
+                </div>
+                <div class="fan-2">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
+                  </div>
+                </div>
+                <div class="fan-3">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
+                  </div>
+                </div>
+                <div class="fan-4">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Create vertical lines in the bg -->
+            <!-- <div class="background">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div> -->
+            <div class="floor">
+              <div class="shadows">
+              </div>
+            </div>
+          </div>
+          <button aria-label="Pause Button" class="btn__pause">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="11" cy="11" r="9" fill="var(--blue-100)" />
+              <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z"
+                fill="var(--blue-500)" />
+            </svg>
+          </button>
+        </div>
+        <div class="hero__cta">
           <p class="hero__body hero__body--home">
             Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
             offering.
@@ -172,202 +358,15 @@
             </a>
           </div>
         </div>
-        <div class="hero__minipod">
-
-          <div class="scroll scroll__home">
-            <!-- <div class="scroll__mouse"></div> -->
-            <span class="scroll__text">scroll for more</span>
-            <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
-          <!-- Create two rotation buttons -->
-          <!-- <button class="rotateBtn" id="turnLeft"></button>
-          <button class="rotateBtn" id="turnRight"></button> -->
-          <div class="cameraRotate_left">
-            <div class="cameraRotate_right">
-              <div class="base">
-                <div class="spine">
-                  <div class="side-1"></div>
-                  <div class="side-2"></div>
-                  <div class="side-3">
-                    <div class="tooltip tooltip-flipped">
-                      <h2>4x</h2>
-                      <p>15,000 CFM Fans</p>
-                    </div>
-                  </div>
-                  <div class="side-4">
-                    <div class="tooltip tooltip-normal">
-                      <h2>3x</h2>
-                      <p>Awning-based Intake System</p>
-                    </div>
-                  </div>
-                  <div class="side-top"></div>
-                  <div class="side-bottom"></div>
-                  <div class="door-1"></div>
-                  <div class="busway-1">
-                    <div class="tooltip tooltip-busway">
-                      <h2>2x</h2>
-                      <p>Rooftop Mounted Busways</p>
-                    </div>
-                  </div>
-                  <div class="door-2"></div>
-                  <div class="busway-2">
-                    <div class="tooltip tooltip-busway tooltip-busway-flipped">
-                      <h2>2x</h2>
-                      <p>Rooftop Mounted Busways</p>
-                    </div>
-                  </div>
-                  <div class="awning-1">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
-                  </div>
-                  <div class="awning-2">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
-                  </div>
-                  <div class="awning-3">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
-                  </div>
-                  <div class="fan-1">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-2">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-3">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-4">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Create vertical lines in the bg -->
-              <!-- <div class="background">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-              </div> -->
-              <div class="floor">
-                <div class="shadows">
-                </div>
-              </div>
-            </div>
-          </div>
-          <button aria-label="Pause Button" class="btn__pause">
-            <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="11" cy="11" r="9" fill="var(--blue-100)" />
-              <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z"
-                fill="var(--blue-500)" />
-            </svg>
-          </button>
-        </div>
       </div>
+      </div>
+      <div class="scroll scroll__home">
+        <!-- <div class="scroll__mouse"></div> -->
+        <span class="scroll__text">scroll for more</span>
+        <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
     </section>
 
     <!-- <section class="btc">
