--- a/products-minipod.html
+++ b/products-minipod.html
@@ -28,10 +28,6 @@
   <script defer src="/app/js/scroll-detection.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
 
-  <!-- GreenSock -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-  <script defer src="/app/js/sparkles.js"></script>
-
   <title>Digital Shovel - Minipod</title>
 </head>
 
@@ -178,176 +174,174 @@
 
       <div class="hero__minipod-container">
         <div class="hero__minipod hero__minipod--featured">
-          <div class="cameraRotate_left">
-            <div class="cameraRotate_right">
-              <div class="base">
-                <div class="spine">
-                  <div class="side-1"></div>
-                  <div class="side-2"></div>
-                  <div class="side-3">
-                    <div class="tooltip tooltip-flipped">
-                      <h2>4x</h2>
-                      <p>15,000 CFM Fans</p>
-                    </div>
+          <div class="cameraRotate">
+            <div class="base">
+              <div class="spine">
+                <div class="side-1"></div>
+                <div class="side-2"></div>
+                <div class="side-3">
+                  <div class="tooltip tooltip-flipped">
+                    <h2>4x</h2>
+                    <p>15,000 CFM Fans</p>
                   </div>
-                  <div class="side-4">
-                    <div class="tooltip tooltip-normal">
-                      <h2>3x</h2>
-                      <p>Awning-based Intake System</p>
-                    </div>
+                </div>
+                <div class="side-4">
+                  <div class="tooltip tooltip-normal">
+                    <h2>3x</h2>
+                    <p>Awning-based Intake System</p>
                   </div>
-                  <div class="side-top"></div>
-                  <div class="side-bottom"></div>
-                  <div class="door-1"></div>
-                  <div class="busway-1">
-                    <div class="tooltip tooltip-busway">
-                      <h2>2x</h2>
-                      <p>Rooftop Mounted Busways</p>
-                    </div>
+                </div>
+                <div class="side-top"></div>
+                <div class="side-bottom"></div>
+                <div class="door-1"></div>
+                <div class="busway-1">
+                  <div class="tooltip tooltip-busway">
+                    <h2>2x</h2>
+                    <p>Rooftop Mounted Busways</p>
                   </div>
-                  <div class="door-2"></div>
-                  <div class="busway-2">
-                    <div class="tooltip tooltip-busway tooltip-busway-flipped">
-                      <h2>2x</h2>
-                      <p>Rooftop Mounted Busways</p>
-                    </div>
+                </div>
+                <div class="door-2"></div>
+                <div class="busway-2">
+                  <div class="tooltip tooltip-busway tooltip-busway-flipped">
+                    <h2>2x</h2>
+                    <p>Rooftop Mounted Busways</p>
                   </div>
-                  <div class="awning-1">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
+                </div>
+                <div class="awning-1">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="awning-2">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="awning-3">
+                  <div class="awning-side-1"></div>
+                  <div class="awning-side-2"></div>
+                  <div class="awning-side-3"></div>
+                  <div class="awning-side-4"></div>
+                  <div class="awning-side-5"></div>
+                </div>
+                <div class="fan-1">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
                   </div>
-                  <div class="awning-2">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
+                </div>
+                <div class="fan-2">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
                   </div>
-                  <div class="awning-3">
-                    <div class="awning-side-1"></div>
-                    <div class="awning-side-2"></div>
-                    <div class="awning-side-3"></div>
-                    <div class="awning-side-4"></div>
-                    <div class="awning-side-5"></div>
+                </div>
+                <div class="fan-3">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
                   </div>
-                  <div class="fan-1">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-2">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-3">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
-                  </div>
-                  <div class="fan-4">
-                    <div class="fan-side-1"></div>
-                    <div class="fan-side-2"></div>
-                    <div class="fan-side-3"></div>
-                    <div class="fan-side-4"></div>
-                    <div class="fan-side-5"></div>
-                    <div class="fan-extension-1"></div>
-                    <div class="fan-extension-2"></div>
-                    <div class="fan-extension-3"></div>
-                    <div class="fan-extension-4"></div>
-                    <div class="fan-extension-5"></div>
-                    <div class="fan-extension-6"></div>
-                    <div class="fan-extension-7"></div>
-                    <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base">
-                      <div class="fan-swing-1"></div>
-                      <div class="fan-swing-2"></div>
-                      <div class="fan-swing-3"></div>
-                      <div class="fan-swing-4"></div>
-                    </div>
+                </div>
+                <div class="fan-4">
+                  <div class="fan-side-1"></div>
+                  <div class="fan-side-2"></div>
+                  <div class="fan-side-3"></div>
+                  <div class="fan-side-4"></div>
+                  <div class="fan-side-5"></div>
+                  <div class="fan-extension-1"></div>
+                  <div class="fan-extension-2"></div>
+                  <div class="fan-extension-3"></div>
+                  <div class="fan-extension-4"></div>
+                  <div class="fan-extension-5"></div>
+                  <div class="fan-extension-6"></div>
+                  <div class="fan-extension-7"></div>
+                  <div class="fan-extension-8"></div>
+                  <div class="fan-swing-base">
+                    <div class="fan-swing-1"></div>
+                    <div class="fan-swing-2"></div>
+                    <div class="fan-swing-3"></div>
+                    <div class="fan-swing-4"></div>
                   </div>
                 </div>
               </div>
-              <div class="background">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-              </div>
-              <div class="floor">
-                <div class="shadows">
-                </div>
+            </div>
+            <div class="background">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="floor">
+              <div class="shadows">
               </div>
             </div>
           </div>
