minipod rotation naming refactor

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
       <div class="hero__right-side">
         <div class="hero__minipod">
-          <div class="cameraRotate">
+          <div class="camera-rotate">
             <div class="base">
               <div class="spine">
                 <div class="side-1"></div>
