--- a/products-minipod.html
+++ b/products-minipod.html
@@ -174,7 +174,7 @@
 
       <div class="hero__minipod-container">
         <div class="hero__minipod hero__minipod--featured">
-          <div class="cameraRotate">
+          <div class="camera-rotate">
             <div class="base">
               <div class="spine">
                 <div class="side-1"></div>
