--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <small>26-28 July</small><small>•</small><small class="text--emphasis">Mining Disrupt
               2022</small><small>•</small><small>Register now</small>
           </a> -->
-        <h1 class="hero__heading">
+        <h1 class="hero__heading hero__text">
           Revolutionary <emphasis>crypto mining</emphasis> containers
         </h1>
         <iframe class="hero__video" width="490" height="275"
