--- a/index.html
+++ b/index.html
@@ -357,11 +357,9 @@
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg></a>
           </div>
-          <picture class="app__mockup app__mockup--left">
-            <source srcset="images/illustrations/app-control-mobile.png" media="(max-width:425px)">
-            <img src="images/illustrations/app-control.png"
-              alt="Mockup of the Digital Shovel web application showcasing some the customizable pricing.">
-          </picture>
+          <div class="app__mockup">
+            <figure class="app__mockup-img app__mockup-img-control"></figure>
+          </div>
         </div>
       </article>
 
@@ -386,11 +384,9 @@
               </svg>
             </a>
           </div>
-          <picture class="app__mockup app__mockup--right">
-            <source srcset="images/illustrations/app-monitor-mobile.png" media="(max-width:425px)" type="image/webp">
-            <img src="images/illustrations/app-monitor.png"
-              alt="Mockup of the Digital Shovel web application showcasing its real-time data monitoring capabilities.">
-          </picture>
+          <div class="app__mockup">
+            <figure class="app__mockup-img app__mockup-img-monitor"></figure>
+          </div>
         </div>
       </article>
 
@@ -413,71 +409,67 @@
               </svg>
             </a>
           </div>
-          <picture class="app__mockup app__mockup--left">
-            <source srcset="images/illustrations/app-alerts-mobile.png" media="(max-width:425px)" type="image/webp">
-            <img src="images/illustrations/app-alerts.png"
-              alt="Mockup of the Digital Shovel web application showcasing its ability to send email alerts and notifications.">
-          </picture>
+          <div class="app__mockup">
+            <figure class="app__mockup-img app__mockup-img-alerts"></figure>
+          </div>
         </div>
       </article>
 
     </section>
 
     <section class="testimonials">
-      <div class="">
-        <div class="container--sm flex gap--md ai-end">
-          <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <g class="testimonials__chat-bubble">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M33.0207 0.523521C30.1603 0.523521 27.8414 2.84236 27.8414 5.7028L27.8414 16.0614C27.8414 18.9218 30.1603 21.2407 33.0207 21.2407L53.7379 21.2407C56.5983 21.2407 58.9171 18.9218 58.9171 16.0614V5.70281C58.9171 2.84237 56.5983 0.523521 53.7379 0.523521L33.0207 0.523521ZM48.5587 21.2408H39.9265L42.9163 24.8286C43.6065 25.6568 44.8786 25.6568 45.5689 24.8286L48.5587 21.2408Z"
-                fill="#307FE2" />
-              <path d="M34.7472 7.42889L52.0115 7.42889" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
-              <path d="M34.7472 14.3349L45.1058 14.3349" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
-              <path d="M50.2849 14.3349H52.0114" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
-            </g>
-            <g class="testimonials__left-person">
-              <circle cx="28" cy="44" r="6" fill="#CCE3FF" />
-              <path
-                d="M18 64C18 58.4772 22.4772 54 28 54C33.5228 54 38 58.4772 38 64V70.6667C38 72.5076 36.5076 74 34.6667 74H21.3333C19.4924 74 18 72.5076 18 70.6667V64Z"
-                fill="#CCE3FF" />
-            </g>
-            <g class="testimonials__right-person">
-              <circle cx="60" cy="44" r="6" fill="#CCE3FF" />
-              <path
-                d="M50 64C50 58.4772 54.4772 54 60 54C65.5228 54 70 58.4772 70 64V70.6667C70 72.5076 68.5076 74 66.6667 74H53.3333C51.4924 74 50 72.5076 50 70.6667V64Z"
-                fill="#CCE3FF" />
-            </g>
-            <circle cx="44" cy="38" r="8" fill="#307FE2" />
-            <path
-              d="M32 62C32 55.3726 37.3726 50 44 50C50.6274 50 56 55.3726 56 62V70C56 72.2091 54.2091 74 52 74H36C33.7909 74 32 72.2091 32 70V62Z"
+      <div class="container--sm flex gap--md ai-end">
+        <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <g class="testimonials__chat-bubble">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M33.0207 0.523521C30.1603 0.523521 27.8414 2.84236 27.8414 5.7028L27.8414 16.0614C27.8414 18.9218 30.1603 21.2407 33.0207 21.2407L53.7379 21.2407C56.5983 21.2407 58.9171 18.9218 58.9171 16.0614V5.70281C58.9171 2.84237 56.5983 0.523521 53.7379 0.523521L33.0207 0.523521ZM48.5587 21.2408H39.9265L42.9163 24.8286C43.6065 25.6568 44.8786 25.6568 45.5689 24.8286L48.5587 21.2408Z"
               fill="#307FE2" />
-          </svg>
-          <div class="flex flex-col">
-            <h2 class="testimonials__subheading">Customer Testimonials</h2>
-            <h3 class="testimonials__heading">What our clients say about us</h3>
-          </div>
+            <path d="M34.7472 7.42889L52.0115 7.42889" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
+            <path d="M34.7472 14.3349L45.1058 14.3349" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
+            <path d="M50.2849 14.3349H52.0114" stroke="#F0F7FF" stroke-width="3" stroke-linecap="round" />
+          </g>
+          <g class="testimonials__left-person">
+            <circle cx="28" cy="44" r="6" fill="#CCE3FF" />
+            <path
+              d="M18 64C18 58.4772 22.4772 54 28 54C33.5228 54 38 58.4772 38 64V70.6667C38 72.5076 36.5076 74 34.6667 74H21.3333C19.4924 74 18 72.5076 18 70.6667V64Z"
+              fill="#CCE3FF" />
+          </g>
+          <g class="testimonials__right-person">
+            <circle cx="60" cy="44" r="6" fill="#CCE3FF" />
+            <path
+              d="M50 64C50 58.4772 54.4772 54 60 54C65.5228 54 70 58.4772 70 64V70.6667C70 72.5076 68.5076 74 66.6667 74H53.3333C51.4924 74 50 72.5076 50 70.6667V64Z"
+              fill="#CCE3FF" />
+          </g>
+          <circle cx="44" cy="38" r="8" fill="#307FE2" />
+          <path
+            d="M32 62C32 55.3726 37.3726 50 44 50C50.6274 50 56 55.3726 56 62V70C56 72.2091 54.2091 74 52 74H36C33.7909 74 32 72.2091 32 70V62Z"
+            fill="#307FE2" />
+        </svg>
+        <div class="flex flex-col">
+          <h2 class="testimonials__subheading">Customer Testimonials</h2>
+          <h3 class="testimonials__heading">What our clients say about us</h3>
         </div>
-        <ul onmouseenter="showChatBubble()" onmouseleave="hideChatBubble()" class="testimonials__list">
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-          </li>
-
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “I can just set it and let Digital Shovel do all the work while I sit back and collect.”
-            </p>
-          </li>
-
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “With all the security and low power cost, this was a no brainer for us starting with 20 rigs.”
-            </p>
-          </li>
-        </ul>
       </div>
+      <ul onmouseenter="showChatBubble()" onmouseleave="hideChatBubble()" class="testimonials__list">
+        <li class="testimonials__list-item">
+          <p class="list-item__body">
+            “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
+          </p>
+        </li>
+
+        <li class="testimonials__list-item">
+          <p class="list-item__body">
+            “I can just set it and let Digital Shovel do all the work while I sit back and collect.”
+          </p>
+        </li>
+
+        <li class="testimonials__list-item">
+          <p class="list-item__body">
+            “With all the security and low power cost, this was a no brainer for us starting with 20 rigs.”
+          </p>
+        </li>
+      </ul>
     </section>
 
     <section class="stats">
