--- a/contact.html
+++ b/contact.html
@@ -122,9 +122,9 @@
     <section class="form container">
       <form action="https://formspree.io/f/xbjbjwdz" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset fieldset__3-col flex flex-col">
-          <label class="fieldset__label" for="Name">Full Name</label>
-          <input class="fieldset__text" type="text" id="input-name" name="Name" placeholder="John Doe" autocomplete="on"
-            required>
+          <label class="fieldset__label" for="Full-Name">Full Name</label>
+          <input class="fieldset__text" type="text" id="input-full-name" name="Full-Name" placeholder="John Doe"
+            autocomplete="on" required>
         </div>
         <div class="fieldset fieldset__3-col flex flex-col">
           <label class="fieldset__label" for="Email">Email</label>
@@ -143,7 +143,7 @@
         </div>
         <div class="fieldset fieldset__3-col flex flex-col">
           <label class="fieldset__label" for="Country">Country</label>
-          <select id="country" name="country" class="fieldset__select" required>
+          <select id="country" name="Country" class="fieldset__select" required>
             <option value="">Select One</option>
             <optgroup label="Most Commonly Selected">
               <option value="Canada">Canada</option>
@@ -388,7 +388,7 @@
               <option value="Uzbekistan">Uzbekistan</option>
               <option value="Vanuatu">Vanuatu</option>
               <option value="Venezuela">Venezuela</option>
-              <option value="Viet Nam">Viet Nam</option>
+              <option value="Vietnam">Vietnam</option>
               <option value="Virgin Islands, British">Virgin Islands, British</option>
               <option value="Virgin Islands, U.S.">Virgin Islands, U.S.</option>
               <option value="Wallis and Futuna">Wallis and Futuna</option>
@@ -400,84 +400,54 @@
           </select>
         </div>
         <div class="fieldset fieldset__3-col flex flex-col">
-          <label class="fieldset__label" for="Province">State/Province</label>
-          <select class="fieldset__select" id="state" name="state" required>
-            <option value="">Select One</option>
-            <optgroup label="U.S. States/Territories">
-              <option value="AK">Alaska</option>
-              <option value="AL">Alabama</option>
-              <option value="AR">Arkansas</option>
-              <option value="AZ">Arizona</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="CT">Connecticut</option>
-              <option value="DC">District of Columbia</option>
-              <option value="DE">Delaware</option>
-              <option value="FL">Florida</option>
-              <option value="GA">Georgia</option>
-              <option value="HI">Hawaii</option>
-              <option value="IA">Iowa</option>
-              <option value="ID">Idaho</option>
-              <option value="IL">Illinois</option>
-              <option value="IN">Indiana</option>
-              <option value="KS">Kansas</option>
-              <option value="KY">Kentucky</option>
-              <option value="LA">Louisiana</option>
-              <option value="MA">Massachusetts</option>
-              <option value="MD">Maryland</option>
-              <option value="ME">Maine</option>
-              <option value="MI">Michigan</option>
-              <option value="MN">Minnesota</option>
-              <option value="MO">Missouri</option>
-              <option value="MS">Mississippi</option>
-              <option value="MT">Montana</option>
-              <option value="NC">North Carolina</option>
-              <option value="ND">North Dakota</option>
-              <option value="NE">Nebraska</option>
-              <option value="NH">New Hampshire</option>
-              <option value="NJ">New Jersey</option>
-              <option value="NM">New Mexico</option>
-              <option value="NV">Nevada</option>
-              <option value="NY">New York</option>
-              <option value="OH">Ohio</option>
-              <option value="OK">Oklahoma</option>
-              <option value="OR">Oregon</option>
-              <option value="PA">Pennsylvania</option>
-              <option value="PR">Puerto Rico</option>
-              <option value="RI">Rhode Island</option>
-              <option value="SC">South Carolina</option>
-              <option value="SD">South Dakota</option>
-              <option value="TN">Tennessee</option>
-              <option value="TX">Texas</option>
-              <option value="UT">Utah</option>
-              <option value="VA">Virginia</option>
-              <option value="VT">Vermont</option>
-              <option value="WA">Washington</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WV">West Virginia</option>
-              <option value="WY">Wyoming</option>
-            </optgroup>
-            <optgroup label="Canadian Provinces">
-              <option value="AB">Alberta</option>
-              <option value="BC">British Columbia</option>
-              <option value="MB">Manitoba</option>
-              <option value="NB">New Brunswick</option>
-              <option value="NF">Newfoundland</option>
-              <option value="NT">Northwest Territories</option>
-              <option value="NS">Nova Scotia</option>
-              <option value="NU">Nunavut</option>
-              <option value="ON">Ontario</option>
-              <option value="PE">Prince Edward Island</option>
-              <option value="QC">Quebec</option>
-              <option value="SK">Saskatchewan</option>
-              <option value="YT">Yukon Territory</option>
-            </optgroup>
+          <label class="fieldset__label" for="Timezone">Timezone</label>
+          <select class="fieldset__select" id="timezone" name="Timezone" required>
+            <option value="-12:00">(GMT -12:00) Eniwetok, Kwajalein</option>
+            <option value="-11:00">(GMT -11:00) Midway Island, Samoa</option>
+            <option value="-10:00">(GMT -10:00) Hawaii</option>
+            <option value="-09:50">(GMT -9:30) Taiohae</option>
+            <option value="-09:00">(GMT -9:00) Alaska</option>
+            <option value="-08:00">(GMT -8:00) Pacific Time (US &amp; Canada)</option>
+            <option value="-07:00">(GMT -7:00) Mountain Time (US &amp; Canada)</option>
+            <option value="-06:00">(GMT -6:00) Central Time (US &amp; Canada), Mexico City</option>
+            <option value="-05:00" selected>(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</option>
+            <option value="-04:50">(GMT -4:30) Caracas</option>
+            <option value="-04:00">(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</option>
+            <option value="-03:50">(GMT -3:30) Newfoundland</option>
+            <option value="-03:00">(GMT -3:00) Brazil, Buenos Aires, Georgetown</option>
+            <option value="-02:00">(GMT -2:00) Mid-Atlantic</option>
+            <option value="-01:00">(GMT -1:00) Azores, Cape Verde Islands</option>
+            <option value="+00:00">(GMT) Western Europe Time, London, Lisbon, Casablanca</option>
+            <option value="+01:00">(GMT +1:00) Brussels, Copenhagen, Madrid, Paris</option>
+            <option value="+02:00">(GMT +2:00) Kaliningrad, South Africa</option>
+            <option value="+03:00">(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</option>
+            <option value="+03:50">(GMT +3:30) Tehran</option>
+            <option value="+04:00">(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</option>
+            <option value="+04:50">(GMT +4:30) Kabul</option>
+            <option value="+05:00">(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</option>
+            <option value="+05:50">(GMT +5:30) Bombay, Calcutta, Madras, New Delhi</option>
+            <option value="+05:75">(GMT +5:45) Kathmandu, Pokhara</option>
+            <option value="+06:00">(GMT +6:00) Almaty, Dhaka, Colombo</option>
+            <option value="+06:50">(GMT +6:30) Yangon, Mandalay</option>
+            <option value="+07:00">(GMT +7:00) Bangkok, Hanoi, Jakarta</option>
+            <option value="+08:00">(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</option>
+            <option value="+08:75">(GMT +8:45) Eucla</option>
+            <option value="+09:00">(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
+            <option value="+09:50">(GMT +9:30) Adelaide, Darwin</option>
+            <option value="+10:00">(GMT +10:00) Eastern Australia, Guam, Vladivostok</option>
+            <option value="+10:50">(GMT +10:30) Lord Howe Island</option>
+            <option value="+11:00">(GMT +11:00) Magadan, Solomon Islands, New Caledonia</option>
+            <option value="+11:50">(GMT +11:30) Norfolk Island</option>
+            <option value="+12:00">(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka</option>
+            <option value="+12:75">(GMT +12:45) Chatham Islands</option>
+            <option value="+13:00">(GMT +13:00) Apia, Nukualofa</option>
+            <option value="+14:00">(GMT +14:00) Line Islands, Tokelau</option>
           </select>
         </div>
         <div class="fieldset fieldset__6-col flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
           <div class="flex">
-            <input type="radio" name="Purpose-of-Contact" id="Support" value="Support">
+            <input type="radio" name="Purpose-of-Contact" id="Support" value="Support" required>
             <label class="fieldset__radio fieldset__radio--add-bl-radius" for="Support">Support</label>
             <input type="radio" name="Purpose-of-Contact" id="Sales" value="Sales">
             <label class="fieldset__radio fieldset__radio--add-border" for="Sales">Sales</label>
@@ -488,6 +458,7 @@
         <div class="fieldset fieldset__6-col fieldset__order flex flex-col">
           <label class="fieldset__label" for="Project-Size">Project Size</label>
           <select class="fieldset__select" id="input-project-size" name="Project-Size" required>
+            <option value="">Select One</option>
             <option value="300-900kW">300 - 900 kW</option>
             <option value="1-5MW">1 - 5 MW</option>
             <option value="5-10MW">5 - 10 MW</option>
