--- a/pages/products-minipod.html
+++ b/pages/products-minipod.html
@@ -337,6 +337,7 @@
           <li class="card__list-item flex">380-415 Volts 5 Wire
             (3 Poles, Neutral + Ground)</li>
           <li class="card__list-item flex">220-240 Volts Primary to Neutral</li>
+          <li class="card__list-item flex">208 Volt 3-Phase 3 Wire + Ground</li>
         </ul>
       </div>
       <div class="card-2 flex flex-col gap--md">
@@ -346,7 +347,8 @@
         </div>
         <ul class="card__list flex flex-col gap--md">
           <li class="card__list-item flex">Each MINIPOD is equipped with two SPDUs</li>
-          <li class="card__list-item flex">96 - C19 outlets with a 20A dedicated breaker per outlet</li>
+          <li class="card__list-item flex">96 (42 outlets on 208 Volt PDU) - C19 outlets with a 20A dedicated breaker
+            per outlet</li>
           <li class="card__list-item flex">Allows max wattage while providing max protection</li>
           <li class="card__list-item flex">Individual port monitoring and switching</li>
           <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common
