--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
 
   <header class="header">
 
-    <nav class="navbar">
+    <nav class="navbar container">
       <div class="navbar__container">
         <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
