--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -34,6 +34,16 @@
 
   <header class="header">
 
+    <div class="topbar">
+      <span class="topbar__text">
+        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="16" cy="16" r="16" fill="var(--red-100)" />
+          <path d="M22.2225 10.6665L12.4447 22.2221L8.88916 18.6665" stroke="var(--red-500)" stroke-width="3.55556"
+            stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+        units available in Canada ready to be shipped</span>
+    </div>
+
     <nav class="navbar">
       <div class="navbar__container">
         <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
