added "new" icon label

--- a/pages/products-minipod.html
+++ b/pages/products-minipod.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.8">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.9">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -347,7 +347,7 @@
           <li class="card__list-item flex">380-415 Volts 5 Wire
             (3 Poles, Neutral + Ground)</li>
           <li class="card__list-item flex">220-240 Volts Primary to Neutral</li>
-          <li class="card__list-item flex">208 Volt 3-Phase 3 Wire + Ground</li>
+          <li class="card__list-item card__list-item--new flex">208 Volt 3-Phase 3 Wire + Ground</li>
         </ul>
       </div>
       <div class="card-2 flex flex-col gap--md">
