--- a/pages/products-minipod.html
+++ b/pages/products-minipod.html
@@ -25,7 +25,7 @@
 
   <!-- Javascript -->
   <script defer src="/app/js/home.js"></script>
-  <script defer src="/app/js/scroll-detection.js"></script>
+  <script defer src="/app/js/detect-scroll.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
 
   <title>Digital Shovel - Minipod</title>
@@ -44,7 +44,7 @@
         units available in Canada ready to be shipped</span>
     </div>
 
-    <nav class="navbar">
+    <nav class="navbar container">
       <div class="navbar__container">
         <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
@@ -72,7 +72,7 @@
                 </g>
               </svg>
             </a></li>
-          <li class="dropdown" onclick="">
+          <li class="dropdown">
             <span class="dropdown__title">Products
               <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -117,15 +117,15 @@
         <li>
           <a class="subnav__link subnav__link--product subnav__link--active" href="#product">Product</a>
         </li>
-        <span class="subnav__divider">|</span>
+        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--specs" href="#specifications">Specifications</a>
         </li>
-        <span class="subnav__divider">|</span>
+        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--bundle" href="#bundle">Bundle</a>
         </li>
-        <span class="subnav__divider">|</span>
+        <li class="subnav__divider">|</li>
         <li>
           <a class="subnav__link subnav__link--pricing" href="#pricing">Pricing</a>
         </li>
