--- a/pages/team.html
+++ b/pages/team.html
@@ -61,7 +61,7 @@
               </g>
             </svg>
           </a></li>
-        <li class="dropdown" onclick="">
+        <li class="dropdown">
           <span class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
