--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         units available in Canada ready to be shipped</span>
     </div>
 
-    <nav class="navbar">
+    <nav class="navbar container">
       <div class="navbar__container">
         <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
@@ -75,7 +75,7 @@
                 </g>
               </svg>
             </a></li>
-          <li class="dropdown" onclick="">
+          <li class="dropdown">
             <span class="dropdown__title">Products
               <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
