--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=1.0.10">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.10">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -72,7 +72,7 @@
                 </g>
               </svg>
             </a></li>
-          <li class="dropdown" onclick="">
+          <li class="dropdown">
             <span class="dropdown__title">Products
               <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
             <ul class="dropdown__menu">
               <li>
                 <a class="dropdown__link" href="pages/products-minipod.html">
-                  <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                  <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon">
                   <div class="dropdown__text">
                     <h5>Minipod Container
                       <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -127,7 +127,7 @@
       </div>
 
       <div class="hero__img">
-        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+        <img src="../images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
 
@@ -137,7 +137,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="../index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -147,14 +147,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -164,8 +164,8 @@
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
